--- a/ComposeFotosAppFJV/gradle/libs.versions.toml
+++ b/ComposeFotosAppFJV/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ composeBom = "2025.01.00"
 coil = "2.6.0"
 ksp = "1.9.24-1.0.20"
 loggingInterceptor = "4.12.0"
-
+datastorePreferences = "1.1.2"
 hilt = "2.50"
 androidxHiltNavigationCompose = "1.2.0"
 androidx-material3 = "1.2.0"
@@ -28,7 +28,7 @@ kotlinxSerialization = "1.6.3"
 
 
 [libraries]
-
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
